--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -84,8 +84,8 @@
             </group>
 
             <notebook>
-              <page string="Approval Steps">
-                <field name="approval_line_ids" readonly="1">
+              <page string="Approval Steps" name="approval_steps">
+                <field name="approval_line_ids">
                   <list>
                     <field name="name"/>
                     <field name="approver_id"/>
