--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -57,31 +57,34 @@
       <field name="model">kh.approval.request</field>
       <field name="arch" type="xml">
         <form string="Approval Request">
-          <header>
-            <!-- Visible only in draft -->
-            <button name="action_withdraw_request" type="object" string="Withdraw"
-        class="btn-secondary"
-        attrs="{'invisible': ['|', ('state','!=','in_review'), ('requester_id','!=',uid)]}"/>
+<header>
+  <button name="action_submit" type="object" string="Submit"
+          class="oe_highlight"
+          attrs="{'invisible': [('state','!=','draft')]}"/>
 
-<button name="action_opt_out_as_approver" type="object" string="Withdraw as Approver"
-        class="btn-secondary"
-        attrs="{'invisible': ['|', ('state','!=','in_review'), ('is_current_user_approver','=',False)]}"/>
+  <button name="action_withdraw_request" type="object" string="Withdraw"
+          class="btn-secondary"
+          attrs="{'invisible': ['|', ('state','!=','in_review'), ('requester_id','!=',uid)]}"/>
 
-<button name="action_unapprove_my_step" type="object" string="Revert My Approval"
-        class="btn-secondary"
-        attrs="{'invisible': [('state','not in',('in_review','approved'))]}"/>
+  <button name="action_opt_out_as_approver" type="object" string="Withdraw as Approver"
+          class="btn-secondary"
+          attrs="{'invisible': ['|', ('state','!=','in_review'), ('is_current_user_approver','=',False)]}"/>
 
-            <button name="action_submit" type="object" string="Submit"
-                    class="oe_highlight" invisible="state != 'draft'"/>
+  <button name="action_unapprove_my_step" type="object" string="Revert My Approval"
+          class="btn-secondary"
+          attrs="{'invisible': [('state','not in',('in_review','approved'))]}"/>
 
-            <!-- Visible only while in_review (button guards permission anyway) -->
-            <button name="action_approve_request" type="object" string="Approve"
-                    class="btn-primary" invisible="state != 'in_review'"/>
-            <button name="action_reject_request" type="object" string="Reject"
-                    class="btn-secondary" invisible="state != 'in_review'"/>
+  <button name="action_approve_request" type="object" string="Approve"
+          class="btn-primary"
+          attrs="{'invisible': [('state','!=','in_review')]}"/>
 
-            <field name="state" widget="statusbar" statusbar_visible="draft,in_review,approved,rejected"/>
-          </header>
+  <button name="action_reject_request" type="object" string="Reject"
+          class="btn-secondary"
+          attrs="{'invisible': [('state','!=','in_review')]}"/>
+
+  <field name="state" widget="statusbar" statusbar_visible="draft,in_review,approved,rejected"/>
+</header>
+
 
           <sheet>
             <group>
