--- a/addons/kh_approvals/views/menu.xml
+++ b/addons/kh_approvals/views/menu.xml
@@ -1,51 +1,46 @@
-<odoo>
-  <data>
-    <!-- Root menu -->
-    <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
+<!-- My Requests -->
+<record id="action_kh_approval_requests_my" model="ir.actions.act_window">
+  <field name="name">📝 My Requests</field>
+  <field name="res_model">kh.approval.request</field>
+  <field name="view_mode">list,form</field>
+  <field name="search_view_id" ref="view_kh_approval_request_search"/>
+  <field name="context">{'search_default_my_requests': 1}</field>
 
-    <!-- Actions that reference the search view (safe now because views are loaded) -->
-    <record id="action_kh_approval_requests_my" model="ir.actions.act_window">
-      <field name="name">📝 My Requests</field>
-      <field name="res_model">kh.approval.request</field>
-      <field name="view_mode">list,form</field>
-      <field name="search_view_id" ref="view_kh_approval_request_search"/>
-      <field name="context">{'search_default_my_requests': 1}</field>
-      <field name="help" type="html">
-        <p>Create approval requests and route them based on rules.</p>
-      </field>
-    </record>
+  <!-- 👇 add these two fields -->
+  <field name="views">
+    [(ref('view_kh_approval_request_list'), 'list'),
+     (ref('view_kh_approval_request_form_base'), 'form')]
+  </field>
+  <field name="view_id" ref="view_kh_approval_request_form_base"/>
+</record>
 
-    <record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
-      <field name="name">✅ To Approve</field>
-      <field name="res_model">kh.approval.request</field>
-      <field name="view_mode">list,form</field>
-      <field name="search_view_id" ref="view_kh_approval_request_search"/>
-      <field name="context">{'search_default_to_approve': 1}</field>
-    </record>
+<!-- All Requests -->
+<record id="action_kh_approval_requests_all" model="ir.actions.act_window">
+  <field name="name">📚 All Requests</field>
+  <field name="res_model">kh.approval.request</field>
+  <field name="view_mode">list,form</field>
+  <field name="search_view_id" ref="view_kh_approval_request_search"/>
 
-    <!-- Menus -->
-    <menuitem id="menu_kh_approvals_my"
-              name="My Requests"
-              parent="kh_approvals.menu_kh_approvals_root"
-              action="action_kh_approval_requests_my"
-              sequence="1"/>
+  <!-- 👇 add -->
+  <field name="views">
+    [(ref('view_kh_approval_request_list'), 'list'),
+     (ref('view_kh_approval_request_form_base'), 'form')]
+  </field>
+  <field name="view_id" ref="view_kh_approval_request_form_base"/>
+</record>
 
-    <menuitem id="menu_kh_approvals_to_approve"
-              name="To Approve"
-              parent="kh_approvals.menu_kh_approvals_root"
-              action="action_kh_approval_requests_to_approve"
-              sequence="2"/>
+<!-- To Approve -->
+<record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
+  <field name="name">✅ To Approve</field>
+  <field name="res_model">kh.approval.request</field>
+  <field name="view_mode">list,form</field>
+  <field name="search_view_id" ref="view_kh_approval_request_search"/>
+  <field name="context">{'search_default_to_approve': 1}</field>
 
-    <menuitem id="menu_kh_approvals_rules"
-              name="Rules"
-              parent="kh_approvals.menu_kh_approvals_root"
-              action="action_kh_approval_rules"
-              sequence="3"/>
-
-    <menuitem id="menu_kh_departments"
-              name="Departments"
-              parent="kh_approvals.menu_kh_approvals_root"
-              action="action_kh_departments"
-              sequence="4"/>
-  </data>
-</odoo>
+  <!-- 👇 add -->
+  <field name="views">
+    [(ref('view_kh_approval_request_list'), 'list'),
+     (ref('view_kh_approval_request_form_base'), 'form')]
+  </field>
+  <field name="view_id" ref="view_kh_approval_request_form_base"/>
+</record>
