approvals: silence emails on state changes; keep full file

--- a/addons/kh_approvals/views/menu.xml
+++ b/addons/kh_approvals/views/menu.xml
@@ -1,46 +1,81 @@
-<!-- My Requests -->
-<record id="action_kh_approval_requests_my" model="ir.actions.act_window">
-  <field name="name">📝 My Requests</field>
-  <field name="res_model">kh.approval.request</field>
-  <field name="view_mode">list,form</field>
-  <field name="search_view_id" ref="view_kh_approval_request_search"/>
-  <field name="context">{'search_default_my_requests': 1}</field>
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+  <data>
 
-  <!-- 👇 add these two fields -->
-  <field name="views">
-    [(ref('view_kh_approval_request_list'), 'list'),
-     (ref('view_kh_approval_request_form_base'), 'form')]
-  </field>
-  <field name="view_id" ref="view_kh_approval_request_form_base"/>
-</record>
+    <!-- Window actions -->
+    <record id="action_kh_approval_requests_my" model="ir.actions.act_window">
+      <field name="name">📝 My Requests</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="view_kh_approval_request_search"/>
+      <field name="context">{'search_default_my_requests': 1}</field>
+      <!-- ensure it opens our list+form -->
+      <field name="views">
+        [(ref('view_kh_approval_request_list'), 'list'),
+         (ref('view_kh_approval_request_form_base'), 'form')]
+      </field>
+      <field name="view_id" ref="view_kh_approval_request_form_base"/>
+    </record>
 
-<!-- All Requests -->
-<record id="action_kh_approval_requests_all" model="ir.actions.act_window">
-  <field name="name">📚 All Requests</field>
-  <field name="res_model">kh.approval.request</field>
-  <field name="view_mode">list,form</field>
-  <field name="search_view_id" ref="view_kh_approval_request_search"/>
+    <record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
+      <field name="name">✅ To Approve</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="view_kh_approval_request_search"/>
+      <field name="context">{'search_default_to_approve': 1}</field>
+      <field name="views">
+        [(ref('view_kh_approval_request_list'), 'list'),
+         (ref('view_kh_approval_request_form_base'), 'form')]
+      </field>
+      <field name="view_id" ref="view_kh_approval_request_form_base"/>
+    </record>
 
-  <!-- 👇 add -->
-  <field name="views">
-    [(ref('view_kh_approval_request_list'), 'list'),
-     (ref('view_kh_approval_request_form_base'), 'form')]
-  </field>
-  <field name="view_id" ref="view_kh_approval_request_form_base"/>
-</record>
+    <record id="action_kh_approval_requests_all" model="ir.actions.act_window">
+      <field name="name">📚 All Requests</field>
+      <field name="res_model">kh.approval.request</field>
+      <field name="view_mode">list,form</field>
+      <field name="search_view_id" ref="view_kh_approval_request_search"/>
+      <field name="views">
+        [(ref('view_kh_approval_request_list'), 'list'),
+         (ref('view_kh_approval_request_form_base'), 'form')]
+      </field>
+      <field name="view_id" ref="view_kh_approval_request_form_base"/>
+    </record>
 
-<!-- To Approve -->
-<record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
-  <field name="name">✅ To Approve</field>
-  <field name="res_model">kh.approval.request</field>
-  <field name="view_mode">list,form</field>
-  <field name="search_view_id" ref="view_kh_approval_request_search"/>
-  <field name="context">{'search_default_to_approve': 1}</field>
+    <!-- Menus -->
+    <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
 
-  <!-- 👇 add -->
- <field name="views">
-  [(ref('view_kh_approval_request_list'), 'list'),
-   (ref('view_kh_approval_request_form_base'), 'form')]
-</field>
-<field name="view_id" ref="view_kh_approval_request_form_base"/>
-</record>
+    <menuitem id="menu_kh_approvals_my"
+              name="My Requests"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_requests_my"
+              sequence="1"/>
+
+    <menuitem id="menu_kh_approvals_to_approve"
+              name="To Approve"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_requests_to_approve"
+              sequence="2"/>
+
+    <menuitem id="menu_kh_approvals_all"
+              name="All Requests"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_requests_all"
+              sequence="3"/>
+
+    <!-- (These two assume you already have the actions defined elsewhere;
+         if not, keep whatever you had before) -->
+    <menuitem id="menu_kh_approvals_rules"
+              name="Rules"
+              parent="menu_kh_approvals_root"
+              action="action_kh_approval_rules"
+              sequence="4"/>
+
+    <menuitem id="menu_kh_departments"
+              name="Departments"
+              parent="menu_kh_approvals_root"
+              action="action_kh_departments"
+              sequence="5"/>
+
+  </data>
+</odoo>
