--- a/addons/kh_approvals/views/menu.xml
+++ b/addons/kh_approvals/views/menu.xml
@@ -3,44 +3,51 @@
   <data>
 
     <!-- Window actions -->
-    <record id="action_kh_approval_requests_my" model="ir.actions.act_window">
-      <field name="name">📝 My Requests</field>
-      <field name="res_model">kh.approval.request</field>
-      <field name="view_mode">list,form</field>
-      <field name="search_view_id" ref="view_kh_approval_request_search"/>
-      <field name="context">{'search_default_my_requests': 1}</field>
-      <!-- ensure it opens our list+form -->
-      <field name="views">
-        [(ref('view_kh_approval_request_list'), 'list'),
-         (ref('view_kh_approval_request_form_base'), 'form')]
-      </field>
-      <field name="view_id" ref="view_kh_approval_request_form_base"/>
-    </record>
+ <record id="action_kh_approval_requests_my" model="ir.actions.act_window">
+  <field name="name">📝 My Requests</field>
+  <field name="res_model">kh.approval.request</field>
+  <field name="view_mode">list,form</field>
+  <field name="search_view_id" ref="view_kh_approval_request_search"/>
+  <field name="context">{'search_default_my_requests': 1}</field>
+  <field name="views">
+    [(ref('view_kh_approval_request_list'), 'list'),
+     (ref('view_kh_approval_request_form_base'), 'form')]
+  </field>
+  <!-- optional: show a nice empty-list message instead of jumping to create -->
+  <field name="help" type="html">
+    <p>No requests yet. Click “New” to create your first one.</p>
+  </field>
+</record>
 
-    <record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
-      <field name="name">✅ To Approve</field>
-      <field name="res_model">kh.approval.request</field>
-      <field name="view_mode">list,form</field>
-      <field name="search_view_id" ref="view_kh_approval_request_search"/>
-      <field name="context">{'search_default_to_approve': 1}</field>
-      <field name="views">
-        [(ref('view_kh_approval_request_list'), 'list'),
-         (ref('view_kh_approval_request_form_base'), 'form')]
-      </field>
-      <field name="view_id" ref="view_kh_approval_request_form_base"/>
-    </record>
+<record id="action_kh_approval_requests_to_approve" model="ir.actions.act_window">
+  <field name="name">✅ To Approve</field>
+  <field name="res_model">kh.approval.request</field>
+  <field name="view_mode">list,form</field>
+  <field name="search_view_id" ref="view_kh_approval_request_search"/>
+  <field name="context">{'search_default_to_approve': 1}</field>
+  <field name="views">
+    [(ref('view_kh_approval_request_list'), 'list'),
+     (ref('view_kh_approval_request_form_base'), 'form')]
+  </field>
+  <field name="help" type="html">
+    <p>No pending approvals. 🎉</p>
+  </field>
+</record>
 
-    <record id="action_kh_approval_requests_all" model="ir.actions.act_window">
-      <field name="name">📚 All Requests</field>
-      <field name="res_model">kh.approval.request</field>
-      <field name="view_mode">list,form</field>
-      <field name="search_view_id" ref="view_kh_approval_request_search"/>
-      <field name="views">
-        [(ref('view_kh_approval_request_list'), 'list'),
-         (ref('view_kh_approval_request_form_base'), 'form')]
-      </field>
-      <field name="view_id" ref="view_kh_approval_request_form_base"/>
-    </record>
+<record id="action_kh_approval_requests_all" model="ir.actions.act_window">
+  <field name="name">📚 All Requests</field>
+  <field name="res_model">kh.approval.request</field>
+  <field name="view_mode">list,form</field>
+  <field name="search_view_id" ref="view_kh_approval_request_search"/>
+  <field name="views">
+    [(ref('view_kh_approval_request_list'), 'list'),
+     (ref('view_kh_approval_request_form_base'), 'form')]
+  </field>
+  <field name="help" type="html">
+    <p>No records to show.</p>
+  </field>
+</record>
+
 
     <!-- Menus -->
     <menuitem id="menu_kh_approvals_root" name="Approvals" sequence="20"/>
