--- a/addons/kh_approvals/views/approval_request_views.xml
+++ b/addons/kh_approvals/views/approval_request_views.xml
@@ -86,6 +86,11 @@
           class="btn-secondary"
           invisible="state != 'in_review'"/>
 
+  <!-- Revise button -->
+  <button name="action_revise_request" type="object" string="Revise"
+          class="btn-secondary"
+          invisible="state == 'draft' or requester_id != uid"/>
+
   <field name="state" widget="statusbar" statusbar_visible="draft,in_review,approved,rejected"/>
 </header>
 
@@ -100,6 +105,9 @@
                 <field name="requester_id" readonly="1"/>
                 <field name="amount"/>
                 <field name="currency_id"/>
+                <field name="revision" readonly="1"/>
+                <field name="last_revised_by" readonly="1"/>
+                <field name="last_revised_on" readonly="1"/>
               </group>
               <group>
                 <field name="company_id" groups="base.group_multi_company"/>
